<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/jungle_green"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="inherit"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogin"
        app:layout_constraintVertical_bias="0.0" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:src="@drawable/swiftlet"
                android:layout_gravity="center"
                android:background="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:hint="@string/username"
                app:boxBackgroundColor="@color/textInput_background"
                app:startIconDrawable="@drawable/baseline_person_outline_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="1dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@color/textInput_background"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/icon_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:id="@+id/errorLoginTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginStart="16dp"/>
            <CheckBox android:id="@+id/autoLoginCb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_login"
                android:layout_marginStart="8dp"/>

            <Button
                android:id="@+id/LoginBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="15sp"
                android:layout_gravity="center"  />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>